--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.CGrepActors</groupId>
-    <artifactId>CGrepWithActors</artifactId>
+    <groupId>com.STMVendingMachine</groupId>
+    <artifactId>STMVendingMachine</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -23,19 +23,9 @@
     <dependencies>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.11</artifactId>
-            <version>2.4-SNAPSHOT</version>
+            <artifactId>akka-stream-contrib-mqtt_2.12</artifactId>
+            <version>0.6</version>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>akka-snapshots</id>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <url>http://repo.akka.io/snapshots/</url>
-        </repository>
-    </repositories>
 
 </project>
